Added my server

--- a/.ssh/config
+++ b/.ssh/config
@@ -8,3 +8,7 @@ Host git.selfnet.de
     Port 22
     IdentityFile ~/.ssh/id_rsa_selfnet
     ForwardAgent yes
+
+Host server
+    HostName 141.70.125.8
+    User markus
