Added login server for work

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,7 +2,7 @@ Host login
     HostName login.selfnet.de
     IdentityFile ~/.ssh/id_rsa_selfnet
     User markusb
-    
+
 Host git.selfnet.de
     User git
     Port 22
@@ -12,3 +12,7 @@ Host git.selfnet.de
 Host server
     HostName 141.70.125.8
     User markus
+
+Host arbeit
+    HostName ipvslogin.informatik.uni-stuttgart.de
+    User baurms
