Fixed ssh for selfnet login server

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,13 +1,39 @@
+#login
 Host login
     HostName login.selfnet.de
     IdentityFile ~/.ssh/id_rsa_selfnet
     User markusb
+    ProxyCommand none
 
+#login servers
+Host login-1 login-2
+    HostName %h.server.selfnet.de
+    User markusb
+    IdentityFile ~/.ssh/id_rsa_selfnet
+    ProxyCommand none
+    ForwardAgent no
+
+#other servers with root
+Host asd
+    HostName %h.server.selfnet.de
+    User markusb
+    IdentityFile ~/.ssh/id_rsa_selfnet
+    ProxyCommand ssh -q -x login -W %h:22
+    ForwardAgent yes
+
+#Special case for git
 Host git.selfnet.de
     User git
     Port 22
     IdentityFile ~/.ssh/id_rsa_selfnet
     ForwardAgent yes
+    ProxyCommand ssh -q -x login -W %h:22
+
+#Other servers without root
+Host *.server.selfnet.de *.selfnet.de
+    User markusb
+    IdentityFile ~/.ssh/id_rsa_selfnet
+    ProxyCommand ssh -q -x login -W %h:22
 
 Host server
     HostName 141.70.125.8
