Added distributed systems git configuration

--- a/.ssh/config
+++ b/.ssh/config
@@ -19,7 +19,6 @@ Host asd
     User markusb
     IdentityFile ~/.ssh/id_rsa_selfnet
     ProxyCommand ssh -q -x login -W %h:22
-    ForwardAgent yes
 
 #Special case for git
 Host git.selfnet.de
@@ -42,3 +41,7 @@ Host server
 Host arbeit
     HostName ipvslogin.informatik.uni-stuttgart.de
     User baurms
+
+Host fabiangajek.de
+    User ds
+    IdentityFile ~/.ssh/id_rsa_selfnet
