Readded arbeit as ipvslogin

--- a/.ssh/config
+++ b/.ssh/config
@@ -27,7 +27,6 @@ Host git.selfnet.de
     Port 22
     IdentityFile ~/.ssh/id_rsa_selfnet
     ForwardAgent yes
-    ProxyCommand ssh -q -x login -W %h:22
 
 #Other servers without root
 Host *.server.selfnet.de *.selfnet.de
@@ -38,7 +37,12 @@ Host *.server.selfnet.de *.selfnet.de
 Host server
     HostName 141.70.125.8
     User markus
+    ProxyCommand ssh -q -x login -W %h:22
 
-Host arbeit
+Host ipvslogin
     HostName ipvslogin.informatik.uni-stuttgart.de
     User baurms
+
+Host helium kepler vgpu1 vgpu2
+    User baurms
+    ProxyCommand ssh -q -x baurms@ipvslogin.informatik.uni-stuttgart.de -W %h:22
