Added dynamic port forwarding to the server

--- a/.ssh/config
+++ b/.ssh/config
@@ -36,6 +36,7 @@ Host *.server.selfnet.de *.selfnet.de
 Host server
     HostName 141.70.125.8
     User markus
+    DynamicForward 9999
     ProxyCommand ssh -q -x login -W %h:22
 
 Host ipvslogin
