SSh config for gitlab-sgs

--- a/.ssh/config
+++ b/.ssh/config
@@ -42,9 +42,9 @@ Host ipvslogin
     HostName ipvslogin.informatik.uni-stuttgart.de
     User baurms
 
-Host helium kepler vgpu1 vgpu2
+Host helium kepler vgpu1 vgpu2 gitlab-sgs
     User baurms
-    ProxyCommand ssh -q -x baurms@ipvslogin.informatik.uni-stuttgart.de -W %h:22
+    ProxyCommand ssh -q -x ipvslogin -W %h:22
 
 Host fabiangajek.de
     User ds
