Added pixel server

--- a/.ssh/config
+++ b/.ssh/config
@@ -49,3 +49,8 @@ Host helium kepler vgpu1 vgpu2 gitlab-sgs pcsgs07 simsgs
 Host fabiangajek.de
     User ds
     IdentityFile ~/.ssh/id_rsa_selfnet
+
+Host pixel
+    HostName 188.165.253.204
+    Port 47630
+    User markus
