--- a/.ssh/config
+++ b/.ssh/config
@@ -54,3 +54,9 @@ Host pixel
     HostName 188.165.253.204
     Port 47630
     User markus
+
+Host cloud-1
+    HostName 45.62.228.157
+    Port 22
+    User root
+    IdentityFile ~/.ssh/id_rsa_selfnet
