Fix term variable of screen

--- a/.screenrc
+++ b/.screenrc
@@ -21,3 +21,4 @@ shelltitle "$ |bash"
 termcapinfo xterm*|rxvt*|kterm*|Eterm* 'hs:ts=\E]0;:fs=\007:ds=\E]0;\007'
 defhstatus "screen ^E (^Et) | $USER@^EH"
 
+term xterm-256color
