Removed gitlab-sgs

--- a/.ssh/config
+++ b/.ssh/config
@@ -42,7 +42,7 @@ Host ipvslogin
     HostName ipvslogin.informatik.uni-stuttgart.de
     User baurms
 
-Host helium kepler vgpu1 vgpu2 gitlab-sgs pcsgs07 simsgs simsgs.informatik.uni-stuttgart.de
+Host helium kepler vgpu1 vgpu2 pcsgs07 simsgs simsgs.informatik.uni-stuttgart.de
     User baurms
     ProxyCommand ssh -q -x ipvslogin -W %h:22
 
