Removed DS stuff, added bwunicluster

--- a/.ssh/config
+++ b/.ssh/config
@@ -46,10 +46,6 @@ Host helium kepler vgpu1 vgpu2 pcsgs07 simsgs simsgs.informatik.uni-stuttgart.de
     User baurms
     ProxyCommand ssh -q -x ipvslogin -W %h:22
 
-Host fabiangajek.de
-    User ds
-    IdentityFile ~/.ssh/id_rsa_selfnet
-
 Host pixel
     HostName 188.165.253.204
     Port 47630
@@ -60,3 +56,8 @@ Host cloud-1
     Port 22
     User root
     IdentityFile ~/.ssh/id_rsa_selfnet
+
+Host unicluster
+    HostName bwunicluster.scc.kit.edu
+    User st_st107919
+    IdentityFile ~/.ssh/id_rsa_uni
