Added wiki-1 to root hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -14,7 +14,7 @@ Host login-1 login-2
     ForwardAgent no
 
 #other servers with root
-Host gitlab-ci-1
+Host wiki-1 gitlab-ci-1
     HostName %h.server.selfnet.de
     User markusb
     IdentityFile ~/.ssh/id_rsa_selfnet
