--- a/.ssh/config
+++ b/.ssh/config
@@ -41,10 +41,12 @@ Host server
 Host ipvslogin
     HostName ipvslogin.informatik.uni-stuttgart.de
     User baurms
+    IdentityFile ~/.ssh/id_rsa_ipvs
 
 Host helium kepler vgpu1 vgpu2 pcsgs07 simsgs simsgs.informatik.uni-stuttgart.de
     User baurms
     ProxyCommand ssh -q -x ipvslogin -W %h:22
+    IdentityFile ~/.ssh/id_rsa_ipvs
 
 Host pixel
     HostName 188.165.253.204
