Testing altscreen for better vim interaction with screen

--- a/.screenrc
+++ b/.screenrc
@@ -21,4 +21,6 @@ shelltitle "$ |bash"
 termcapinfo xterm*|rxvt*|kterm*|Eterm* 'hs:ts=\E]0;:fs=\007:ds=\E]0;\007'
 defhstatus "screen ^E (^Et) | $USER@^EH"
 
+altscreen on
+
 term xterm-256color
