--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,7 @@ Host login
     IdentityFile ~/.ssh/id_rsa_selfnet
     User markusb
     ProxyCommand none
+    ForwardAgent no
 
 #login servers
 Host login-1 login-2
@@ -54,8 +55,8 @@ Host pixel
     User markus
 
 Host cloud-1
-    HostName 45.62.228.25
-    Port 22
+    HostName 45.62.228.3
+    Port 636
     User root
     IdentityFile ~/.ssh/id_rsa_selfnet
 
