bosch specific stuff

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = markusb@selfnet.de
-	name = Markus Baur 
+	email = fixed-term.Markus.Baur3@de.bosch.com
+	name = Markus Baur
 [color]
         ui = auto
 [alias]
