Use selfnet key for server

--- a/.ssh/config
+++ b/.ssh/config
@@ -36,6 +36,7 @@ Host *.server.selfnet.de *.selfnet.de
 Host server
     HostName 141.70.125.8
     User markus
+    IdentityFile ~/.ssh/id_rsa_selfnet
     DynamicForward 9999
     ProxyCommand ssh -q -x login -W %h:22
 
@@ -64,3 +65,6 @@ Host unicluster
     HostName bwunicluster.scc.kit.edu
     User st_st107919
     IdentityFile ~/.ssh/id_rsa_uni
+
+Host github.com
+    IdentityFile ~/.ssh/id_rsa_selfnet
