Add terran union to ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -68,3 +68,9 @@ Host unicluster
 
 Host github.com
     IdentityFile ~/.ssh/id_rsa_selfnet
+
+Host terran-union
+    HostName 80.82.209.177
+    Port 22
+    User sekuraz
+    IdentityFile ~/.ssh/id_rsa_tu
