Update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,6 @@
+Host *
+    AddKeysToAgent yes
+
 #login
 Host login
     HostName login.selfnet.de
@@ -74,3 +77,7 @@ Host terran-union
     Port 22
     User sekuraz
     IdentityFile ~/.ssh/id_rsa_tu
+
+Host git.swagspace.org
+    User git
+    IdentityFile ~/.ssh/id_rsa_selfnet
