--- a/.ssh/config
+++ b/.ssh/config
@@ -12,6 +12,8 @@ Host login
 #login servers
 Host login-1 login-2
     HostName %h.server.selfnet.de
+
+Host login-1 login-2 login-1.server.selfnet.de login-2.server.selfnet.de
     User markusb
     IdentityFile ~/.ssh/id_rsa_selfnet
     ProxyCommand none
