--- a/.ssh/config
+++ b/.ssh/config
@@ -83,3 +83,16 @@ Host terran-union
 Host git.swagspace.org
     User git
     IdentityFile ~/.ssh/id_rsa_selfnet
+
+Host aurora1
+    User mbaur
+    ProxyCommand ssh -q -x necjump -W %h:22
+    RemoteForward 3128 192.168.50.247:3128
+
+Host necjump
+    User sshjump
+    HostName 192.168.10.200
+
+Host lxt5
+    HostName 192.168.50.156
+    User mbaur
