Allow for agent forwarding within screen.

--- a/.ssh/config
+++ b/.ssh/config
@@ -88,6 +88,7 @@ Host aurora1
     User mbaur
     ProxyCommand ssh -q -x necjump -W %h:22
     RemoteForward 3128 192.168.50.247:3128
+    ForwardAgent yes
 
 Host necjump
     User sshjump
@@ -96,3 +97,4 @@ Host necjump
 Host lxt5
     HostName 192.168.50.156
     User mbaur
+    ForwardAgent yes
