remove old hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,100 +1,6 @@
 Host *
     AddKeysToAgent yes
 
-#login
-Host login
-    HostName login.selfnet.de
-    IdentityFile ~/.ssh/id_rsa_selfnet
-    User markusb
-    ProxyCommand none
-    ForwardAgent no
-
-#login servers
-Host login-1 login-2
-    HostName %h.server.selfnet.de
-
-Host login-1 login-2 login-1.server.selfnet.de login-2.server.selfnet.de
-    User markusb
-    IdentityFile ~/.ssh/id_rsa_selfnet
-    ProxyCommand none
-    ForwardAgent no
-
-#other servers with root
-Host wiki-1 gitlab-ci-1
-    HostName %h.server.selfnet.de
-    User markusb
-    IdentityFile ~/.ssh/id_rsa_selfnet
-    ProxyCommand ssh -q -x login -W %h:22
-
-#Special case for git
-Host git.selfnet.de
-    User git
-    Port 22
-    IdentityFile ~/.ssh/id_rsa_selfnet
-
-#Other servers without root
-Host *.server.selfnet.de *.selfnet.de
-    User markusb
-    IdentityFile ~/.ssh/id_rsa_selfnet
-    ProxyCommand ssh -q -x login -W %h:22
-
-Host server
-    HostName 141.70.125.8
-    User markus
-    IdentityFile ~/.ssh/id_rsa_selfnet
-    DynamicForward 9999
-    ProxyCommand ssh -q -x login -W %h:22
-
-Host ipvslogin
-    HostName ipvslogin.informatik.uni-stuttgart.de
-    User baurms
-    IdentityFile ~/.ssh/id_rsa_ipvs
-
-Host helium kepler vgpu1 vgpu2 pcsgs07 simsgs simsgs.informatik.uni-stuttgart.de
-    User baurms
-    ProxyCommand ssh -q -x ipvslogin -W %h:22
-    IdentityFile ~/.ssh/id_rsa_ipvs
-
-Host pixel
-    HostName 188.165.253.204
-    Port 47630
-    User markus
-
-Host cloud-1
-    HostName 45.62.228.3
-    Port 636
-    User root
-    IdentityFile ~/.ssh/id_rsa_selfnet
-
-Host unicluster
-    HostName bwunicluster.scc.kit.edu
-    User st_st107919
-    IdentityFile ~/.ssh/id_rsa_uni
-
 Host github.com
-    IdentityFile ~/.ssh/id_rsa_selfnet
+    IdentityFile ~/.ssh/id_github
 
-Host terran-union
-    HostName 80.82.209.177
-    Port 22
-    User sekuraz
-    IdentityFile ~/.ssh/id_rsa_tu
-
-Host git.swagspace.org
-    User git
-    IdentityFile ~/.ssh/id_rsa_selfnet
-
-Host aurora1
-    User mbaur
-    ProxyCommand ssh -q -x necjump -W %h:22
-    RemoteForward 3128 172.29.212.147:3128
-    ForwardAgent yes
-
-Host necjump
-    User sshjump
-    HostName 192.168.10.200
-
-Host lxt5
-    HostName 172.29.212.155
-    User mbaur
-    ForwardAgent yes
