--- a/.ssh/config
+++ b/.ssh/config
@@ -3,4 +3,23 @@ Host *
 
 Host github.com
     IdentityFile ~/.ssh/id_github
+    User git
 
+Host gitlab.dirkmb.de gitlab.symovo.org
+    User git
+    Identityfile ~/.ssh/id_rsa_symovo
+
+Host gitlab-ci-*.symovo.org
+    User markus
+    Identityfile ~/.ssh/id_rsa_symovo
+
+Host router router.lan.sekuraz.net router-1 router-1.lan.sekuraz.net
+    HostName 192.168.0.3
+    User root
+    IdentityFile ~/Code/homelab/id_rsa_openwrt
+
+Host 192.168.0.*
+    IdentityFile ~/Code/homelab/id_ed25519
+
+Host 192.168.1.*
+    IdentityFile ~/Code/homelab/id_ed25519
