changes from croz laptop

--- a/.ssh/config
+++ b/.ssh/config
@@ -23,3 +23,11 @@ Host 192.168.0.*
 
 Host 192.168.1.*
     IdentityFile ~/Code/homelab/id_ed25519
+
+Host *.symovo.org
+    UseKeychain yes
+    IdentityFile ~/.ssh/symovo
+
+Host localhost 127.0.0.1 ::1
+    StrictHostKeyChecking no
+    UserKnownHostsFile=/dev/null
