reorganize ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -5,14 +5,12 @@ Host github.com
     IdentityFile ~/.ssh/id_github
     User git
 
-Host gitlab.dirkmb.de gitlab.symovo.org
-    User git
-    Identityfile ~/.ssh/id_rsa_symovo
+# generic local virtual machines or other things, ignore their keys
+Host localhost 127.0.0.1 ::1
+    StrictHostKeyChecking no
+    UserKnownHostsFile=/dev/null
 
-Host gitlab-ci-*.symovo.org
-    User markus
-    Identityfile ~/.ssh/id_rsa_symovo
-
+# mine
 Host router router.lan.sekuraz.net router-1 router-1.lan.sekuraz.net
     HostName 192.168.0.3
     User root
@@ -24,10 +22,11 @@ Host 192.168.0.*
 Host 192.168.1.*
     IdentityFile ~/Code/homelab/id_ed25519
 
+#symovo
 Host *.symovo.org
     UseKeychain yes
     IdentityFile ~/.ssh/symovo
 
-Host localhost 127.0.0.1 ::1
-    StrictHostKeyChecking no
-    UserKnownHostsFile=/dev/null
+Host gitlab-ci-*.symovo.org
+    User markus
+    Identityfile ~/.ssh/id_rsa_symovo
