--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,6 @@
+CanonicalizeHostname yes
+CanonicalDomains lan.sekuraz.net
+
 Host *
     AddKeysToAgent yes
 
@@ -19,7 +22,13 @@ Host router router.lan.sekuraz.net router-1 router-1.lan.sekuraz.net
 Host 192.168.0.*
     IdentityFile ~/Code/homelab/id_ed25519
 
-Host 192.168.1.*
+Host master-*
+    HostName %h.lan.sekuraz.net
+
+Host master-*.lan.sekuraz.net 192.168.1.129 192.168.1.130 192.168.1.131
+    User core
+
+Host 192.168.1.* *.lan.sekuraz.net
     IdentityFile ~/Code/homelab/id_ed25519
 
 #symovo
